    allow playing (unprotected) audiobooks in AAC format.
  * Remove --disable-fpic hack, prefer using --without-pic instead.
  * Add new output plugin: Pulseaudio (based on Polypaudio plugin), that uses
    0.9 API (Pulseaudio is Polypaudio renamed).
  * Mark Polypaudio audio plugin as deprecated, as upstream changed APIs at
    least two times in the mean time.
	
xine-lib (1.1.2)
  * Security fixes:
    - CVE-2005-4048: possible buffer overflow in libavcodec (crafted PNGs).
    - CVE-2006-2802: possible buffer overflow in the HTTP plugin. 
    - possible buffer overflow via bad indexes in specially-crafted AVI files
  * Update gettext support to 0.14.5, disable internal gettext, fix locales
    handling, use the correct domain for strings.
  * Italian translation update
  * Czech translation update
  * Disable the XXMC plugin if Xv support isn't there
  * Also look for Xv support in /usr/lib for X.org's new location
  * Fix using xine-lib on systems with SELinux enabled
  * Build right with libiconv in /usr/local as default on FreeBSD
  * Fix a potential crash with fixed-size lacing in the Matroska demuxer
  * Patch from SuSE to fix alsa after hardware suspend
  * Fix the ./configure --enable-static-xv parameter
  * Really fix the speed changing race that was mentioned in 1.1.1
  * Send events for tvtime filmmode changes
  * Add an image decoder based on gdk-pixbuf
  * Add browseable capability to smb input plugin
  * Enable AMD64 mmx/sse support in some plugins (tvtime, libmpeg2, goom...)
  * Fix xxmc subpictures (broken since 1.1.1)
  * FFmpeg update (version 51.1.0)
  * Fix detection of locale containing a modifier (like "@euro")
  * New volume normalization post plugin
  * New image noise post plugin (useful for mitigating some compression artifacts)
  * Support for Vorbis-style comments in FLAC files
  * Coverity fixes
  * Add ATSC support to the DVB plugin
  * Make various structures and arrays constant.