@@ -78,6 +78,9 @@ Several MRLs may be specified in order to play a number of consecutive
 streams. Additional input plugins will provide additional MRL types. The ones
 listed above are available with stock libxine...
 .br
+As of xine-lib 1.1.3, the DVD title number may be 0 (select navigation) and
+the chapter number may be 0 (full title).
+.br
 .SS VCD MRL Syntax
 A simple \fBvcd:/\fP runs the default item (e.g. perhaps track 1 or entry 0)
 using the default VCD device (perhaps /dev/cdrom). Both the default item and
@@ -115,7 +118,7 @@ unit to to use in a MRL is none is given.  Another configuration setting,
 When you hit the VCD button, that is equivalent to entering \fBvcd:/\fP and
 thus these two configuration settings are used to expand the MRL.
 
-Some examples of MRLS are given below. In the examples, we assume the
+Some examples of MRLs are given below. In the examples, we assume the
 following configuration settings:
 
 .TP
@@ -143,12 +146,12 @@ should be same as above but is currently broken?
 Play Track 1 from /dev/cdrom2
 .TP
 .BI vcd:///dev/cdrom@S1
-Play segment 1 from /dev/cdrom. This assumes there *is* a segment 1. Check
-the MRL list to see if that is the case.
+Play segment 1 from /dev/cdrom. This assumes that there *is* a segment 1.
+Check the MRL list to see if that is the case.
 .TP
 .BI vcd://@P1
 Play playlist item 1 from default device. If there is no playback control,
-MRL will get converted into vcd:/:E0.
+the MRL will be converted into vcd:/@E0.
 Again check the MRL list to see if there is a P1.
 .TP
 .BI vcd://@P1*
