@@ -15,6 +15,7 @@ xine-lib (1.1.3)
     0.9 API (Pulseaudio is Polypaudio renamed).
   * Mark Polypaudio audio plugin as deprecated, as upstream changed APIs at
     least two times in the mean time.
+  * Allow 0 for DVD title/chapter (navigation or full title).
 	
 xine-lib (1.1.2)
   * Security fixes:
